--- a/tokenizer/Cargo.toml
+++ b/tokenizer/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 btleplug = "0.10.5"
 daemonize = "0.5.0"
 dirs = "5.0.1"
-tokio = { version = "1", features = ["full"] }
+futures = "0.3.28"
+futures-util = "0.3.28"
 mini-redis = "0.4"
+tokio = { version = "1", features = ["full"] }
